--- a/index.html
+++ b/index.html
@@ -85,18 +85,31 @@
           <div class="small-img-container">
             <img
               class="active"
+              data-src="images/image-product-1.jpg"
               src="images/image-product-1-thumbnail.jpg"
               alt=""
             />
           </div>
           <div class="small-img-container">
-            <img src="images/image-product-2-thumbnail.jpg" alt="" />
+            <img
+              data-src="images/image-product-2.jpg"
+              src="images/image-product-2-thumbnail.jpg"
+              alt=""
+            />
           </div>
           <div class="small-img-container">
-            <img src="images/image-product-3-thumbnail.jpg" alt="" />
+            <img
+              data-src="images/image-product-3.jpg"
+              src="images/image-product-3-thumbnail.jpg"
+              alt=""
+            />
           </div>
           <div class="small-img-container">
-            <img src="images/image-product-4-thumbnail.jpg" alt="" />
+            <img
+              data-src="images/image-product-4.jpg"
+              src="images/image-product-4-thumbnail.jpg"
+              alt=""
+            />
           </div>
         </div>
       </div>
@@ -134,29 +147,7 @@
       </div>
     </section>
     <div class="view-container">
-      <div class="left-section">
-        <div class="left-section-big-img">
-          <img src="images/image-product-1.jpg" alt="" />
-        </div>
-        <div class="left-section-small-imgs">
-          <div class="small-img-container">
-            <img
-              class="active"
-              src="images/image-product-1-thumbnail.jpg"
-              alt=""
-            />
-          </div>
-          <div class="small-img-container">
-            <img src="images/image-product-2-thumbnail.jpg" alt="" />
-          </div>
-          <div class="small-img-container">
-            <img src="images/image-product-3-thumbnail.jpg" alt="" />
-          </div>
-          <div class="small-img-container">
-            <img src="images/image-product-4-thumbnail.jpg" alt="" />
-          </div>
-        </div>
-      </div>
+      <div class="left-section"></div>
       <div class="view-prev-btn-container">
         <img class="view-prev-btn" src="images/icon-previous.svg" alt="" />
       </div>
