--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="user-info">
         <div class="user-cart">
           <img class="cart-img" src="images/icon-cart.svg" alt="" />
-          <div class="total-no-in-cart">7</div>
+          <div class="total-no-in-cart">0</div>
           <div class="cart-container">
             <div class="cart-title">Cart</div>
             <div class="cart-body">
@@ -56,10 +56,10 @@
                     Fall Limited Edition Sneakers
                   </p>
                   <div class="cart-product-price">
-                    <p class="cart-product-price-one">$125.00</p>
+                    <p class="cart-product-price-one"></p>
                     <span>X</span>
-                    <p class="cart-products-no">3</p>
-                    <p class="cart-total">$375</p>
+                    <p class="cart-products-no"></p>
+                    <p class="cart-total"></p>
                   </div>
                 </div>
                 <img
@@ -136,7 +136,7 @@
               alt=""
               class="right-negative-btn"
             />
-            <span class="right-no-of-products">3</span>
+            <span class="right-no-of-products">0</span>
             <img src="images/icon-plus.svg" alt="" class="right-positive-btn" />
           </div>
           <div class="right-add-btn">
