--- a/index.html
+++ b/index.html
@@ -44,32 +44,7 @@
           <div class="total-no-in-cart">0</div>
           <div class="cart-container">
             <div class="cart-title">Cart</div>
-            <div class="cart-body">
-              <div class="cart-product-info">
-                <img
-                  class="cart-product-img"
-                  src="images/image-product-1-thumbnail.jpg"
-                  alt=""
-                />
-                <div class="cart-product-details">
-                  <p class="cart-product-description">
-                    Fall Limited Edition Sneakers
-                  </p>
-                  <div class="cart-product-price">
-                    <p class="cart-product-price-one"></p>
-                    <span>X</span>
-                    <p class="cart-products-no"></p>
-                    <p class="cart-total"></p>
-                  </div>
-                </div>
-                <img
-                  class="cart-product-delete"
-                  src="images/icon-delete.svg"
-                  alt=""
-                />
-              </div>
-              <button class="cart-checkout">Checkout</button>
-            </div>
+            <div class="cart-body"></div>
           </div>
         </div>
 
